--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -26,20 +26,21 @@
     border-top: none;
   }
 
+
+  .row__data{
+    display: flex;
+  }
   .column{
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #f8f9fa;
     min-width: 40px;
     width: $cell-width;
-    height: 100%;
     border: 1px solid $border-color;
-    background: #f8f9fa;
-    border-top: none;
-    border-left: none;
-  }
-  .row__data{
-    display: flex;
+    border-top: 0;
+    border-left: 0;
+    height: 100%;
   }
   .cell{
     min-width: 40px;
