--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -16,6 +16,7 @@
   }
 
   .row__info{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,6 +33,7 @@
   }
   .column{
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     background: #f8f9fa;
@@ -57,6 +59,35 @@
       border: none;
       outline: 2px solid #2c74ff;
       z-index: 2;
+    }
+  }
+
+  .col-resize{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    width: 4px;
+    background: #3c74ff;
+    z-index: 1000;
+    &:hover{
+      opacity: 1!important;
+      cursor: col-resize;
+    }
+  }
+  .row-resize{
+    position: absolute;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    height: 4px;
+    bottom: 0;
+    background: #3c74ff;
+    z-index: 1000;
+    &:hover{
+      opacity: 1!important;
+      cursor: row-resize;
     }
   }
 }
